--- a/src/renderer/theme/ngpotd-iview-theme.less
+++ b/src/renderer/theme/ngpotd-iview-theme.less
@@ -20,7 +20,10 @@ html,body {
   height: 100%;
 }
 div {
-  line-height: 0;
+    line-height: 0;
+}
+#webpack-hot-middleware-clientOverlay, #webpack-hot-middleware-clientOverlay div {
+  line-height: 1.2em!important;
 }
 .@{btn-prefix-cls} {
   margin: 0;
