Custom scrollbar on masonry

--- a/src/renderer/theme/ngpotd-iview-theme.less
+++ b/src/renderer/theme/ngpotd-iview-theme.less
@@ -17,7 +17,7 @@
 @tooltip-bg             : @body-background;
 
 // General styles
-html,body {
+html, body {
   height: 100%;
 }
 div {
@@ -31,6 +31,7 @@ body {
   -webkit-user-select: none;
   user-select: none;
   cursor: default;
+  overflow: hidden;
 }
 .@{btn-prefix-cls} {
   margin: 0;
