--- a/src/renderer/theme/ngpotd-theme.less
+++ b/src/renderer/theme/ngpotd-theme.less
@@ -18,3 +18,13 @@ div.ng-margin {
 .mg-rx-40 {
   margin-right: 40px;
 }
+::-webkit-scrollbar {
+  height: 12px;
+  width: 12px;
+  background: rgba(255, 206, 0, 0.2);
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 206, 0, 0.4);
+  -webkit-border-radius: 0;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+}
