--- a/src/renderer/theme/ngpotd-theme.less
+++ b/src/renderer/theme/ngpotd-theme.less
@@ -13,7 +13,13 @@ div.ng-margin {
   word-spacing: .05em;
 }
 .align-right {
-  text-align:right;
+  text-align: right;
+}
+.align-center {
+  text-align: center;
+}
+.bottom {
+  margin-top: auto;
 }
 .mg-rx-40 {
   margin-right: 40px;
