--- a/src/renderer/theme/ngpotd-iview-theme.less
+++ b/src/renderer/theme/ngpotd-iview-theme.less
@@ -17,6 +17,9 @@
 
 @tooltip-bg             : @body-background;
 
+@animation-time         : 0.5s;
+@transition-time        : 0.5s;
+
 // General styles
 html, body {
   height: 100%;
